Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ h6 {font-size: 1.2em;}
   width: auto;
 }
 
-.sub-heading {
+.post .sub-heading {
   text-align: left;
 }
 
@@ -177,6 +177,12 @@ h6 {font-size: 1.2em;}
 .post .quote {
   font-size: 160%;
   line-height: 400%;
+  text-align: center;
+}
+
+.post .end-quote {
+  font-size: 160%;
+  line-height: 200%;
   text-align: center;
 }
 
